--- a/templates/news/base.html
+++ b/templates/news/base.html
@@ -1,13 +1,13 @@
 {% extends "base.html" %}
 
 {% block title_base %}
-    &#183; Actualités
+    &#183; News
 {% endblock %}
 
 {% block breadcrumb_base %}
-    <li><a href="{% url "lbp.news.views.index" %}">Actualités</a></li>
+    <li><a href="{% url "lbp.news.views.index" %}">News</a></li>
 {% endblock %}
 
 {% block menu_news %}
-    class="active"
+    active
 {% endblock %}
