--- a/templates/project/base.html
+++ b/templates/project/base.html
@@ -8,6 +8,6 @@
     <li><a href="{% url "lbp.project.views.index" %}">Projets</a></li>
 {% endblock %}
 
-{% block menu_projet %}
-    class="active"
+{% block menu_project %}
+    active
 {% endblock %}
