--- a/templates/news/view.html
+++ b/templates/news/view.html
@@ -2,31 +2,83 @@
 {% load emarkdown %}
 {% load markup %}
 {% load humane_date %}
+{% load profile %}
 
 {% block titre %}
-    {{ actualite.titre }}
+    {{ news.title }}
 {% endblock %}
 
 {% block headline %}
-    <a href="{{ actualite.get_absolute_url }}">{{ actualite.titre }}</a><br />
-    <small>{{ actualite.description }}</small>
+    <a href="{{ news.get_absolute_url }}">{{ news.title }}</a><br />
 {% endblock %}
 
 {% block breadcrumb %}
-    <li class="current"><a href="#">{{ actualite.titre }}</a></li>
+    <li class="current"><a href="#">{{ news.title }}</a></li>
 {% endblock %}
 
 {% block headline-actions %}
-    {% if user in actualite.auteurs.all %}
-        <form action="{% url "lbp.actualite.views.modify" %}" method="POST">
+    
+        <form action="{% url "lbp.news.views.modify" %}" method="POST">
             <div class="button-group">
-                <a href="/actualites/editer?actualite={{ actualite.pk }}" class="button">
-                    <i class="icon-pencil"></i>
-                    Éditer
-                </a>
-                <a href="#" class="button secondary" data-dropdown="delete-drop">
-                    Supprimer
-                </a>
+                {% if user in news.authors.all and news.en_redaction or perms.news.valider_news %}
+                    <a href="/news/editer?news={{ news.pk }}" class="button small">
+                        <i class="icon-pencil"></i>
+                        Éditer
+                    </a>
+                {% endif %}
+                {% if user in news.authors.all and news.en_redaction or perms.news.valider_news %}
+                    <a href="#" class="button secondary small" data-dropdown="delete-drop">
+                        Supprimer
+                    </a>
+                {% endif %}
+                {% if perms.news.valider_news and news.en_validation %}
+                    <a href="#" class="button secondary small success" data-dropdown="valide-drop">
+                        Publier
+                    </a>
+                    <a href="#" class="button secondary small alert" data-dropdown="reject-drop">
+                        Refuser
+                    </a>
+                {% elif perms.news.valider_news and news.en_ligne %}
+                    <a href="#" class="button secondary small alert" data-dropdown="invalide-drop">
+                        Dépublier
+                    </a>
+                {% elif user in news.authors.all and news.en_redaction %}
+                    <a href="#" class="button secondary small success" data-dropdown="ask-valide-drop">
+                        News prête
+                    </a>
+                {% endif %}
+                <div id="invalide-drop" class="f-dropdown small content" data-dropdown-content>
+                    <p>
+                        Attention : Cette news est déjà en ligne, vous allez la dépublier
+                    </p>
+                    <button type="submit" name="invalide" class="button expand alert">
+                        Confirmer la dépublication
+                    </button>
+                </div>
+                <div id="ask-valide-drop" class="f-dropdown small content" data-dropdown-content>
+                    <p>
+                        Attention : si vous envoyez votre news en validation, vous ne pourrez plus l'éditer
+                    </p>
+                    <button type="submit" name="ask-valide" class="button expand success">
+                        Confirmer l'envoi en validation
+                    </button>
+                </div>
+                <div id="reject-drop" class="f-dropdown small content" data-dropdown-content>
+                    <p>
+                        En rejetant cette news, elle retournera chez les auteurs.
+                    </p>
+                    <button type="submit" name="rejet" class="button expand alert">
+                        Confirmer de rejet
+                    </button>
+                </div>
+                <div id="valide-drop" class="f-dropdown small content" data-dropdown-content>
+                    <p>
+                        Attention : si vous validez cette news, elle sera en visible par tous les visiteurs, vérifiez que le contenu est correct.
+                    </p>
+                    <button type="submit" name="valide" class="button expand success">
+                        Confirmer la publication
+                    </button>
+                </div>
                 <div id="delete-drop" class="f-dropdown small content" data-dropdown-content>
                     <p>
                         Si vous supprimez cet actualite, il sera alors impossible de le modifier/consulter de nouveau.
@@ -38,43 +90,156 @@
                 </div>
             </div>
 
-            <input type="hidden" name="actualite" value="{{ actualite.pk }}" />
+            <input type="hidden" name="news" value="{{ news.pk }}" />
             {% csrf_token %}
         </form>
-    {% endif %}
+    
 {% endblock %}
 
 {% block content %}
 
-{% if actualite.is_visible %}
-    {% include "actualite/view_pager.part.html" %}
+{% if news.is_visible %}
+    {% include "news/view_pager.part.html" %}
 {% endif %}
 
 <div class="row">
-    <div class="large-12 columns">
-        <p>
-            Rédigé par
-            {% for member in actualite.auteurs.all %}
+    <div class="large-12 columns panel">
+        <div class="large-3 columns">
+            {% for cat in news.category.all %}
+                <div class="row">
+                    <a href="{{ cat.get_news_url }}" class="button secondary">{{ cat.title }}</a>
+                </div>
+            {% endfor %}
+        </div>
+        <div class="large-4 columns">
+            {% if news.date.pubdate %}
+            {{ news.date.pubdate|humane_date }}.
+            {% endif %}
+        </div>
+        <div class="large-5 columns">
+            Par
+            {% for member in news.authors.all %}
                 {% include "member/member_item_common.part.html" %}
             {% endfor %}
-            et publié
-            {{ actualite.pubdate|humane_date }}.
-        </p>
-
-        {{ actualite.text|emarkdown }}
+        </div>
+    </div>
+    <div class="large-12 columns">
+        <p>
+        {{ news.text|emarkdown }}
+        <p>
     </div>
 </div>
 
-{% if actualite.is_visible %}
-    {% include "actualite/view_pager.part.html" %}
+{% if news.en_ligne %}
+    {% include "news/view_pager.part.html" %}
 {% else %}
 <div class="row">
     <div class="large-12 columns">
         <p>
-            Cet actualite n'a pas encore été mis en ligne.
+            Cet news n'a pas encore été mis en ligne.
         </p>
     </div>
 </div>
+{% endif %}
+
+{% if news.en_ligne %}
+<hr />
+<div class="row">
+    <div class="small-3 small-centered columns">
+        <h3>Commentaires</h3>
+    </div>
+</div>
+
+{% for post in news.get_comments %}
+<div class="post {% if forloop.first and nb > 1 %}before{% endif %} {% if post.is_useful %}useful{% endif %}">
+        <div class="row post-head" id="p{{ post.id }}">
+            <div class="large-2 columns post-nickname">
+                <p>
+                    <a href="{{ post.author.get_absolute_url }}">
+                        {{ post.author.username }}
+                    </a>
+                </p>
+            </div>
+            <div class="large-10 columns">
+                <div class="right">
+                    {% if user.is_authenticated %}
+                        <div class="button-group">
+                            {% if post.author == user %}
+                                <a href="/news/message/editer?message={{ post.pk }}" class="button secondary small">
+                                    <i class="icon-pencil"></i>
+                                    Éditer
+                                </a>
+                            {% endif %}
+
+                            {% if not topic.is_locked and not topic.antispam %}
+                                <a href="/news/message/nouveau?sujet={{ topic.pk }}&amp;cite={{ post.pk }}"
+                                    class="button secondary small">
+                                    <i class="icon-quote-left"></i>
+                                    Citer
+                                </a>
+                            {% endif %}
+                        </div>
+                    {% endif %}
+                </div>
+                <p>
+                    <a href="#p{{ post.pk }}">#</a>
+                    {{ post.pubdate|humane_date }}
+                    {% if not post.update = None %}
+                        (dernière édition {{ post.update|humane_date }})
+                    {% endif %}
+                    {% if forloop.first and nb > 1 %}
+                        &ndash; page précédente
+                    {% endif %}
+                </p>
+            </div>
+        </div>
+        <div class="row post-content">
+            <div class="large-2 columns hide-for-small post-avatar">
+                {% with profile=post.author|profile %}
+                    <img src="{{ profile.get_avatar_url }}" width="80" height="80" alt="Avatar" />
+                {% endwith %}
+            </div>
+            <div class="large-10 columns">
+                {{ post.text|emarkdown }}
+            </div>
+        </div>
+    </div>
+{% endfor %}
+
+{% include "news/news_pagination.part.html" with position="bottom" %}
+
+{% if user.is_authenticated %}
+<form action="{% url "lbp.news.views.answer" %}?news={{ news.pk }}"
+method="POST" id="submit_form">
+    <div class="row">
+        <div class="large-12 columns">
+            <h4>Ajouter un commentaire</h4>
+            {% include "misc/editor.part.html" %}
+            <textarea id='id_text' name="text" rows="10" {% if news.antispam %}disabled{% endif %}
+                placeholder="Votre message au format Markdown.">{% spaceless %}
+                    {% if news.antispam  %}
+                        Vous ne pouvez pas encore poster dans ce sujet (protection antispam de 15 min).
+                    {% endif %}
+                {% endspaceless %}</textarea>
+        </div>
+    </div>
+    <div class="row">
+        <div class="large-8 large-centered columns" style="text-align: center;">
+            <button class="button btn-primary" type="submit" {% if news.antispam %}disabled{% endif %}>
+                <i class="icon-reply"></i>
+                Répondre
+            </button>
+            <button type="submit" name="preview" class="button secondary" {% if news.antispam %}disabled{% endif %}>
+                Prévisualiser
+            </button>
+        </div>
+    </div>
+    {% with last_post=news.get_last_answer %}
+        <input type="hidden" name="last_comment" value="{{ last_post.pk }}" />
+    {% endwith %}
+    {% csrf_token %}
+</form>
+{% endif %}
 {% endif %}
 
 {% endblock %}
