--- a/templates/project/index.html
+++ b/templates/project/index.html
@@ -1,6 +1,4 @@
 {% extends "project/base.html" %}
-{% load humane_date %}
-{% load emarkdown %}
 
 {% block title %}
     Liste des projets
@@ -23,8 +21,8 @@
 
         {% if user.is_authenticated %}
             <a href="{% url "lbp.project.views.new" %}" class="button radius">
-                <i class="icon-plus"></i>
-                Créer un project
+                <i class="fi-mountains"></i>
+                Créer un projet
             </a>
         {% endif %}
 
@@ -32,21 +30,5 @@
 {% endblock %}
 
 {% block content %}
-
-    <div class="large-12 columns">  
- 
-        <div class="row">
- 
-            <div class="large-12 columns">
-                <h2>projects</h2><hr>
-            </div>
-            {% for p in projects %}
-          <div class="large-3 columns">
-            <img src="http://placehold.it/500x500&text=Thumbnail">
-            <div class="panel">
-              <p>{{ p.title }}</p>
-            </div>
-          </div>
-            {% endfor %}
-        </div>
+  {% include "project/list.html" %}
 {% endblock %}
