--- a/assets/css/lebonprojet.css
+++ b/assets/css/lebonprojet.css
@@ -5064,7 +5064,7 @@ form.custom .custom.disabled {
   padding: 8px 15px 2px;
   margin-bottom: 0;
   text-transform: uppercase;
-  color: #555555;
+  color: white;
   font-weight: bold;
   font-size: 0.625em;
 }
