--- a/assets/sass/_settings.scss
+++ b/assets/sass/_settings.scss
@@ -1238,8 +1238,8 @@ $topbar-link-weight:                   normal;
 // $topbar-link-bg-hover:                 darken($topbar-bg, 3%);
 $topbar-link-bg-active:                darken($topbar-bg, 5%);
 
-// $topbar-dropdown-label-color:          #555;
-// $topbar-dropdown-label-text-transform: uppercase;
+$topbar-dropdown-label-color:          #FFF;
+$topbar-dropdown-label-text-transform: uppercase;
 // $topbar-dropdown-label-font-weight:    bold;
 // $topbar-dropdown-label-font-size:      emCalc(10px);
 
