--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,4 @@
-﻿{% load staticfiles %}
+{% load staticfiles %}
 {% load compressed %}
 {% load profile %}
 {% load interventions %}
@@ -7,7 +7,7 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <title>{% block title %}Sans nom{% endblock %}{% block title_base %}{% endblock %} &#183; Progdupeupl</title>
+    <title>{% block title %}Sans nom{% endblock %}{% block title_base %}{% endblock %} &#183; LeBonProjet</title>
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
