--- a/templates/base.html
+++ b/templates/base.html
@@ -303,9 +303,8 @@
         <div class="large-8 columns">
             <ul class="inline-list right">
                 
-                <li><a href="#">Twitter</a></li>
-                <li><a href="#">Source</a></li>
-                <li><a href="{% url "lbp.pages.views.index" %}">Plus…</a></li>
+                <li><a href="{% url "lbp.pages.views.roadmap" %}">Roadmap</a></li>
+                <li><a href="#">Code source</a></li>
             </ul>
         </div>
     </div>
